k8s-yaml/cici-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cici-backend
  labels: 
    app.kubernetes.io/name: cici
    app.kubernetes.io/instance: cici-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cici
      app.kubernetes.io/instance: cici-backend
  replicas: 1
  template:
    metadata: 
      labels:
        app.kubernetes.io/name: cici
        app.kubernetes.io/instance: cici-backend
    spec:
      containers:
        - name: cici-backend
          image: ccr.ccs.tencentyun.com/koderover-public/cici-backend:latest
          imagePullPolicy: Always 
          command:
            - /workspace/cici
          ports:
            - protocol: TCP
              containerPort: 20219
---
apiVersion: v1
kind: Service
metadata:
  name: cici-backend
  labels:
    app.kubernetes.io/name: cici
    app.kubernetes.io/instance: cici-backend
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 20219
      targetPort: 20219
