k8s-yaml/hellocici-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellocici-frontend
  labels:
    app.kubernetes.io/instance: hellocici-frontend
    app.kubernetes.io/name: hellocici-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: hellocici-frontend
      app.kubernetes.io/name: hellocici-frontend
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hellocici-frontend
        app.kubernetes.io/name: hellocici-frontend
    spec:
      affinity:
       podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
         - weight: 100
           podAffinityTerm:
             topologyKey: kubernetes.io/hostname
      containers:
        - name: hellocici-frontend
          image: ccr.ccs.tencentyun.com/trial/hellocici-frontend:20201216202138-1-master
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 80
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 100M
      imagePullSecrets:
      - name: hello-candidate-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: hellocici-frontend
  labels:
    app.kubernetes.io/instance: hellocici-frontend
    app.kubernetes.io/name: hellocici-frontend
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellocici-frontend
  annotations:
    "helm.sh/resource-policy": keep
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
  labels:
    app.kubernetes.io/instance: hellocici-frontend
    app.kubernetes.io/name: hellocici-frontend
spec:
  rules:
  - host: test.cici.app.8slan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hellocici-frontend
          servicePort: 80
